Fixed css of anchor tag
The "Improve this doc" anchor tag was overlapping the tutorial text. Fixed this by moving it up higher on the page.

--- a/css/v2.css
+++ b/css/v2.css
@@ -4547,7 +4547,7 @@ body {
 .improve-docs {
   position: absolute;
   right: 3.5em;
-  top: 8em; }
+  top: 1em; }
 
 .docs-container .side-nav {
   width: 230px;
